--- a/app/assets/stylesheets/components/_landing_page.scss
+++ b/app/assets/stylesheets/components/_landing_page.scss
@@ -14,42 +14,7 @@ header {
     color: #fff;
 }
 
-.user_form_home{
-  display: flex;
-  // justify-content: space-around;
-}
-#user_email{
-  background: none;
-  border: none;
-  border-bottom: solid 1px #8A8888;
-  font-size: 20px;
-  font-family: "Open Sans";
-  width: 200px;
-  text-align: left;
-  color: white;
-}
 
-@media (min-width: 768px){
-  #user_email{
-    // display: block;
-    font-size: 18px;
-    margin-bottom: 10px;
-    width: 187px;
-    text-align: left;
-  }
-}
-@media (min-width: 992px){
-  #user_email{
-
-  }
-
-}
-@media (min-width: 1200px){
-  #user_email{
-    margin-bottom: 0px;
-  }
-
-}
 
 
 
@@ -165,8 +130,131 @@ header .header-content {
   }
 }
 
+// .user_form_home{
+//   display: flex;
+//   // justify-content: space-around;
+// }
+
+// <--************************ Form pour le email *************************-->
+
+.subscribe {
+  margin-top : 30px;
+}
+
+// #new_user{
+//   margin-bottom: 0px;
+// }
+.animated {
+    visibility: visible;
+    animation-name: fadeInUp;
+    animation-duration: 1s;
+    animation-fill-mode: both;
+}
+
+@media (min-width: 992px) {
+  .input-group-btn {
+    padding-left: 10px !important;
+  }
+}
+
+.form-control {
+  background: none;
+  border: none;
+  border-bottom: solid 1px #8A8888;
+  color: white;
+}
 
 
+
+@media (max-width: 992px) {
+    .input-group .form-control {
+      margin-bottom: 15px !important;
+  }
+}
+
+// Rendre plat le coin en bas a gauche de l'input pour le courriel
+
+.input-group-lg .form-control {
+  border-radius: 0;
+}
+
+// Put the button under de email input below 992px
+
+@media (max-width: 992px) {
+    .input-group {
+      display: inline-block;
+  }
+}
+
+// full-width subscribe button below 992px
+
+@media (max-width: 992px) {
+    .subscribe .btn {
+      width: 100%;
+  }
+}
+
+// <--*******************************************************-->
+
+// #user_email{
+//   background: none;
+//   border: none;
+//   border-bottom: solid 1px #8A8888;
+//   width: 100%;
+//   font-size: 20px;
+//   font-family: "Open Sans";
+//   text-align: left;
+//   color: white;
+// }
+
+// @media (min-width: 992px) {
+//     .form-inline {
+//       width: 100%;
+//   }
+// }
+
+// @media (max-width: 992px) {
+//   .subscribe .btn {
+//       width: 100%;
+//   }
+
+
+  // #user_email{
+  //   width: 100%;
+  // }
+
+// @media (min-width: 768px) {
+// .form-group {
+//     display: inline-block;
+//     margin-bottom: 0;
+//     vertical-align: middle;
+// }
+// }
+// @media (min-width: 768px){
+//   #user_email{
+//     // display: block;
+//     font-size: 18px;
+//     margin-bottom: 10px;
+//     width: 187px;
+//     text-align: left;
+//   }
+// }
+// @media (min-width: 992px){
+//   #user_email{
+//     margin-bottom: 0px;
+
+//   }
+
+// }
+// @media (min-width: 1200px){
+//   #user_email{
+//     margin-bottom: 0px;
+//   }
+
+// }
+
+
+// **************************************************************
 
 header .device-container {
     max-width: 300px;
