--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -51,20 +51,49 @@
             <h1>On veut vous faciliter la vie!</h1>
               <p class="lead">Une boutique en ligne pour l'équipement d'arbitre de hockey.</p>
               <!-- <p><a class="btn btn-lg btn-success" href="#" role="button">Dit-moi quand ça sort</a></p> -->
-                <%= simple_form_for @home_page_user, url: new_user_path(@home_page_user), :method => :post, html: {class: 'form-inline user_form_home'} do |f| %>
-                  <%= f.input :email, required: true, autofocus: true, label: false, placeholder: "courriel@gmail.com" %>
-                  <%# if @home_page_user.nil? %>
-                   <%= f.button :submit, "Dit-moi quand ça sort", class:"btn btn-success" %>
-                  <%# else %>
-                   <%#= button_tag type: :submit, class: "btn btn-success" do %>
-                     <!-- <i class="fa fa-check" aria-hidden="true"></i> -->
-                   <%# end %>
-                  <%# end %>
-                   <%#= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path, class:"btn base-button" %>
-                <% end %>
+
+                <div class="subscribe animated">
+
+                  <div class="row">
+                    <div class="col-md-12">
+
+                       <!--  <div class="input-group input-group-lg">
+
+                            <input type="text" class="form-control" />
+
+                           <div class="input-group-btn">
+                              <button type="submit" class="btn">Dis-moi le</button>
+                           </div>
+
+                        </div> -->
+
+                      <%= simple_form_for @home_page_user, url: new_user_path(@home_page_user), :method => :post, html: {class: 'input-group input-group-lg'} do |f| %>
+
+                      <%= f.input :email, required: true, autofocus: true, label: false, placeholder: "Email" %>
+
+                    <div class="input-group-btn">
+
+                      <%= f.button :submit, "Dit-moi quand ça sort", class:"btn" %>
+
+                    </div>
+                                          <%# if @home_page_user.nil? %>
+                                        <%# else %>
+                                         <%#= button_tag type: :submit, class: "btn btn-success" do %>
+                                           <!-- <i class="fa fa-check" aria-hidden="true"></i> -->
+                                         <%# end %>
+                                        <%# end %>
+                                         <%#= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path, class:"btn base-button" %>
+                      <% end %>
+                    </div>
+                  </div>
+                </div>
+
+
+
           </div>
         </div>
       </div>
+
       <div class="col-xs-12 col-sm-6">
         <div class="device-container">
           <div class="device-container-inner">
